# tectonic-wasm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
output/: tectonic_wasm.wasm
scripts/: create-bundle.sh  create-fontconfig-stub.sh  create-pkgconfig.sh  create-wrapper.sh  generate-format.sh
src/: lib.rs
